--- a/client/src/components/Nav/navigation.scss
+++ b/client/src/components/Nav/navigation.scss
@@ -1,16 +1,41 @@
 
-.navbar {
+.navbar{
+  position: fixed !important;
+  top:0;
+  right:0;
+  left:0;
+  z-index: 1;
   
-  margin: 0 !important;
   border-radius: 0 !important;
 
-  .navbar_container {
+  .navbar_container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
     .item {
       font-size: 1.2em;
     }
     
+  }
+}
+.footer{
+  height: 4em;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: black;
+  color: #b1bbbc;
+  z-index: 1;
+
+  .footer_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .footer_item{
+    padding-top: 1em ;
+    font-size: 1.2em;
   }
 }
