--- a/client/src/components/Nav/navigation.scss
+++ b/client/src/components/Nav/navigation.scss
@@ -1,5 +1,5 @@
 .nav{
-  height: 100%;
+  //height: 100%;
 
   .navbar{
     position: fixed !important;
@@ -40,5 +40,9 @@
       padding-top: 1em ;
       font-size: 1.2em;
     }
+  }
+  .page_title{
+    padding-bottom: 2em;
+    text-align: center;
   }
 }
